--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -6,9 +6,9 @@
 </div>
 
 <div class="qoutes center">
-        We are provide amazing 
+        We are provide amazing Web / Desktop Application
         <span typingAnimation [typeSpeed]="50" [startDelay]="1000" >
-            Web / Desktop Application and Mobile Application for All Platform ..
+             and Mobile Application for All Platform ..
             </span>
         <div class="row">
           <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
