--- a/src/app/photo-zing/photo-zing.component.html
+++ b/src/app/photo-zing/photo-zing.component.html
@@ -14,6 +14,12 @@
     <div class="row">
       <p class="styleTxt">PhotoZing</p>
       <ul class="icon">
+          <li>
+              <div class="chip">
+                  <img src="../../assets/images/jaganRamanikanth.png" alt="Contact Person">
+                  Dhanush kodi
+                </div>
+          </li>
           <li><i class="fas fa-address-book"></i> +91 962-977-7100</li>
           <li><i class="fas fa-mail-bulk"></i> dhanushkodi95@gmail.com</li>
         </ul>
