--- a/src/app/team/team.component.html
+++ b/src/app/team/team.component.html
@@ -34,6 +34,12 @@
         <div class="row">
                 <p class="styleTxt">Unitrix</p>
                 <ul class="icon">
+                    <li>
+                        <div class="chip">
+                            <img src="../../assets/images/jaganRamanikanth.png" alt="Contact Person">
+                            Jagan R
+                          </div>
+                    </li>
                     <li><i class="fas fa-address-book"></i> +91 894-041-7854</li>
                     <li><i class="fas fa-mail-bulk"></i> jaganramanikanth@gmail.com</li>
                   </ul>
@@ -41,48 +47,87 @@
         <div class="row">
                 <p class="styleTxt">PhotoZing</p>
                 <ul class="icon">
+                    <li>
+                        <div class="chip">
+                            <img src="../../assets/images/jaganRamanikanth.png" alt="Contact Person">
+                            Dhanush
+                          </div>
+                    </li>
                     <li><i class="fas fa-address-book"></i> +91 962-977-7100</li>
                     <li><i class="fas fa-mail-bulk"></i> dhanushkodi95@gmail.com</li>
                   </ul>
         </div>
     </div>
     <div class="col s6">
-       <div class="row card" style="width: 70%;
-       padding: 23px 5px;
-       float: right;">
-           <h5 class="center" style="font-weight: 300;">Get in touch with us</h5>
-           <div class="row">
-                <div class="input-field col s6">
-                        
-                        <input id="icon_prefix" type="text" class="validate">
-                        <label for="icon_prefix">First Name</label>
-                      </div>
-                <div class="input-field col s6">
-                            
-                            <input id="icon_prefix" type="text" class="validate">
-                            <label for="icon_prefix">Last Name</label>
-                          </div>
-           </div>
-           <div class="input-field col s12">
-                <input id="email" type="email" class="validate">
-                <label for="email">Email</label>
+    <div class="card" style="padding: 12px 10px;
+    border-radius: 4px;">
+        <h5 class="center" style="font-weight: 300;">Get in touch with us</h5>
+      <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
+        <div class="col s6">
+            <div class="form-group">
+                <label>First Name</label>
+                <input type="text" formControlName="firstName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.firstName.errors }" />
+                <div *ngIf="submitted && f.firstName.errors" class="invalid-feedback">
+                    <div *ngIf="f.firstName.errors.required">First Name is required</div>
+                </div>
             </div>
-            <div class="input-field col s12">
-                   
-                    <input id="icon_telephone" type="tel" class="validate">
-                    <label for="icon_telephone">Telephone</label>
-                  </div>
-            
-                  <div class="row">
-                        <div class="input-field col s12">
-                          <textarea id="textarea1" class="materialize-textarea"></textarea>
-                          <label for="textarea1">Your message</label>
-                        </div>
-                      </div>
-            
-            <div class="center"><span class="uniRedBtn">Sumbit</span></div>
-       </div>
+        </div>
+        <div class="col s6">
+            <div class="form-group">
+                <label>Last Name</label>
+                <input type="text" formControlName="lastName" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.lastName.errors }" />
+                <div *ngIf="submitted && f.lastName.errors" class="invalid-feedback">
+                    <div *ngIf="f.lastName.errors.required">Last Name is required</div>
+                </div>
+            </div>
+        </div>
         
+                    <div class="form-group col s12">
+                        <label>Email</label>
+                        <input type="text" formControlName="email" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.email.errors }" />
+                        <div *ngIf="submitted && f.email.errors" class="invalid-feedback">
+                            <div *ngIf="f.email.errors.required">Email is required</div>
+                            <div *ngIf="f.email.errors.email">Email must be a valid email address</div>
+                        </div>
+                    </div>
+                    <div class="form-group col s12">
+                        <mz-select-container>
+                            <select mz-select
+                            formControlName="select" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.select.errors }"
+                              id="options-select"
+                              [placeholder]="'......'"
+                              [label]="'Choose Your Service'">
+                              
+                              <option value="1">Web Development</option>
+                              <option value="2">Desktop Application</option>
+                              <option value="3">Mobile Apps</option>
+                              <option value="4">Search Engine Optimization</option>
+                              <option value="5">Ecommerce</option>
+                              <option value="6">Firebase</option>
+                              <option value="7">UX/Wordpress</option>
+                              
+                            </select>
+                          </mz-select-container>
+                          <div *ngIf="submitted && f.select.errors" class="invalid-feedback">
+                              <div *ngIf="f.select.errors.required">Service is required</div>
+                          </div>
+                    </div>
+
+                    <div class="form-group col s12">
+                        <label>Your Message</label>
+                        <input type="text" formControlName="password" class="form-control" [ngClass]="{ 'is-invalid': submitted && f.password.errors }" />
+                        <div *ngIf="submitted && f.password.errors" class="invalid-feedback">
+                            <div *ngIf="f.password.errors.required">Message is required</div>
+                            <div *ngIf="f.password.errors.minlength">Message must be at least 10 characters</div>
+                        </div>
+                    </div>
+                    <div class="form-group center">
+                        <button [disabled]="loading" class="uniRedBtn" style="line-height: 0px;
+                        padding: 17px 27px;">Submit</button>
+                    </div>
+                </form>
+      </div> 
     </div>
     
 </div>
+
