--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,11 +1,20 @@
-<div class="row header" id="headerScroll">
+  <!-- mobile nav -->
+  <div class="row hide-on-large-only">
+    <div class="col s2"><img src="../../assets/images/logo.png" id="logo"></div>
+    <div class="col s7"><p class="styleTxt" style="text-align: center;
+      padding: 5px 0 0 0;">Unitrix</p></div>
+    <div class="col s3"><span class="uniRedBtn" routerLink="/Get-started">start</span></div>
+  </div>
+
+<div class="row header hide-on-med-and-down" id="headerScroll">
   
   <div class="col s1">
-    <mz-sidenav [id]="'sidenav-demo'" [collapseButtonId]="'logo'">
-    </mz-sidenav>
     <img src="../../assets/images/logo.png" id="logo">
   </div>
 
+
+
+  <!-- end -->
   <div class="col s9 headerContent" routerLinkActive="active-link" [routerLinkActiveOptions]="{exact: true}">
     <span class="navName"  routerLink="/home" routerLinkActive="TextBold">Home</span>
     
@@ -56,4 +65,5 @@
     <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
   </div>
 </div>
+
 
