--- a/src/app/started/started.component.html
+++ b/src/app/started/started.component.html
@@ -1,7 +1,13 @@
-<div class="row started" style="padding-top:5%">
+<div class="row started" style="padding-top:8%">
+
+    <div class="col s6" style="padding: 0px 70px 0px 150px">
+        <h3>Submit Your Requirement</h3>
+        <h6>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Rem quas esse adipisci sapiente ad asperiores doloremque</h6>
+        <img src="../../assets/images/image.jpg" style="width: 100%;">
+    </div>
   
-  <div class="col s6" style="padding: 0px 40px;border-radius: 6px;">
-           <h5 class="center" style="padding-bottom: 5%;font-weight: 300;">Register</h5>
+  <div class="col s6" style="">
+           <h4 class="center" style="padding-bottom: 5%;font-weight: 300;color: #919293;">Enter the Details..</h4>
            <form [formGroup]="registerForm" (ngSubmit)="onSubmit()">
               <div class="col s6">
                   <div class="form-group">
@@ -66,8 +72,5 @@
                               padding: 17px 27px;">Submit</button>
                           </div>
                       </form>
-          </div>
-          <div class="col s6" style="padding: 0px;">
-              <img src="../../assets/images/start.jpg" style="width: 100%;">
           </div>
 </div>
