--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -106,3 +106,10 @@
     left: calc(100% - 513px);
 }
 
+.hide-on-large-only  #logo{
+    padding-top: 15px;
+    margin-left: 0px;
+    cursor: pointer;
+    position: absolute;
+    width: 6%;
+}
