--- a/src/app/footer/footer.component.html
+++ b/src/app/footer/footer.component.html
@@ -51,5 +51,12 @@
 </div>
 <div class="copyright">
   Copyright © Unitrix Inc. All Rights Reserved
+<div class="footerMenuLink right">
+  <span class="navName footerMenu"  routerLink="/home" routerLinkActive="TextBold">Home</span>
+  <span class="navName footerMenu" routerLink="/Portfolio" routerLinkActive="TextBold">Portfolio</span>
+  <span class="navName footerMenu" routerLink="/Photo-Outsourcing" routerLinkActive="TextBold">PhotoZing</span>
+  <span class="navName footerMenu" routerLink="/team" routerLinkActive="TextBold">Contact Us</span>  
+</div>
+
 </div>
 </div>
