--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,19 +1,24 @@
 
 <particles [style]="style" [width]="width" [height]="height" [params]="Params"></particles>
 
-<div class="row center" style="margin-bottom: 0px;">
-        <img  src="../../assets/images/my-logo.png" id="logo">
-</div>
+<div class="homeComponent" style="margin-top:62px !important;">
 
-<div class="qoutes center">
-        We are provide amazing Web / Desktop Application
-        <span typingAnimation [typeSpeed]="50" [startDelay]="1000" >
-             and Mobile Application for All Platform ..
-            </span>
-        <div class="row">
-          <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
+
+<div class="row" style="margin-top:8%;">
+        <div class="col center s12">
+                <img  src="../../assets/images/my-logo.png" id="logo">
+                <div class="typed qoutes textcenter">
+                <div>We are providing the Service for " </div><div class="typestyle typed-element"></div>  
+                </div>
+                <div class="row mobileBtn center" style="padding-top:34px;">
+                <span class="uniRedBtn" routerLink="/Get-started">GET STARTED</span>
+        </div>
         </div>
 </div>
+
+
+
+
 
 
 
@@ -21,38 +26,40 @@
 <!-- What we do -->
 <div class="row border" style="margin-top:23% !important;">
         <h4 class="we">What we do..</h4>
+        <div class="Innovation center">Innovation for Everyone..</div>
         <div class="col s12">
                 <div class="row">
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#039be5"><i class="fas fa-lightbulb"></i></span>Idea
+                                <span class="weBtn mobileWE" style="background:#039be5"><i class="fas fa-lightbulb"></i></span>Idea
                                 <div class="row">
                                         <h6 class="weContent">Initially begin with a conceptualized session to exhibit ideas and features...</h6>
                                 </div>
                         </div>
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#4CAF50"><i class="fas fa-palette"></i></span>Design
+                                <span class="weBtn mobileWE" style="background:#4CAF50"><i class="fas fa-palette"></i></span>Design
                                 <h6 class="weContent">Pursue user interface to all boards and devise designing options for the application.</h6>
                         </div>
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#ff833b"><i class="fas fa-file-code"></i></span>Development
+                                <span class="weBtn mobileWE" style="background:#ff833b"><i class="fas fa-file-code"></i></span>Development
                                 <h6 class="weContent">Function in consistent sprints to transform design, feature of the application as specified.</h6>
                         </div>
                 </div>
                 <div class="row">
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#F44336"><i class="fas fa-podcast"></i></span>Deployment
+                                <span class="weBtn mobileWE" style="background:#F44336"><i class="fas fa-podcast"></i></span>Deployment
                                 <h6 class="weContent">Collect assessment details from model view presenter built ,iterate and present our product.</h6>
                         </div>
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#653bcb"><i class="fas fa-charging-station"></i></span>Testing
+                                <span class="weBtn mobileWE" style="background:#653bcb"><i class="fas fa-charging-station"></i></span>Testing
                                 <h6 class="weContent">Boundless cooperation with peer programming and periodic testing boundaries.</h6>
                         </div>
                         <div class="col s4 center">
-                                <span class="weBtn" style="background:#cb56cd"><i class="fas fa-tools"></i></span>Maintenance
+                                <span class="weBtn mobileWE" style="background:#cb56cd"><i class="fas fa-tools"></i></span>Maintenance
                                 <h6 class="weContent">We provide round the clock service until the work gets exhausted...</h6>
                         </div>
                 </div>
         </div>
+        
 </div>
 
 
@@ -124,4 +131,5 @@
 
 <div class="row center" style="margin: 6% 0px;">
         <h6 class="webContent" style="font-size: 15px;">" We target the progress of web solutions to the requirement of the organization and align the layout towards the client who will value it to show outstanding experience, to reform processes, to deliver unique services over the internet and to unite information cautiously in a centralized cache and access it in real time."</h6>
+</div>
 </div>
