--- a/src/app/photo-zing/photo-zing.component.html
+++ b/src/app/photo-zing/photo-zing.component.html
@@ -94,7 +94,7 @@
   <!-- SECTORS -->
   <div class="row" style="margin-top: 12% !important;">
     <h4 class="we">Sectors..</h4>
-    <div class="row center">
+    <div class="row center" style="margin: 0 25%;">
       <div class="col s2">Real Estate</div>
       <div class="col s2">Food</div>
       <div class="col s2">Experiences</div>
